alignment fix

--- a/src/app/components/lat-long-coordinates/lat-long-coordinates.component.scss
+++ b/src/app/components/lat-long-coordinates/lat-long-coordinates.component.scss
@@ -28,5 +28,5 @@
   height: auto;
 }
 .progress-margin {
-    margin: 0 100px;
+    margin:auto;
   }
